syntax = "proto3";

package api;

message Parameter {
    string name = 1;
    string value = 2;
    string type = 3;
    string displayName = 4;
    string hint = 5;
    bool required = 6;
    string visibility = 7;

    repeated ParameterOption options = 8;
}

message ParameterOption {
    string name = 1;
    string value = 2;
}